--- a/style.scss
+++ b/style.scss
@@ -48,13 +48,18 @@ body {
     .herosection {
       width: 100%;
       display: flex;
-      overflow: hidden;
+      //   overflow: hidden;
       background-color: #f8f9fc;
       padding-bottom: 4.5rem;
+      @media (max-width: 768px) {
+        flex-direction: column;
+      }
       .lefthero {
         width: 50%;
         margin-left: 3rem;
         padding-top: 13rem;
+        display: flex;
+        flex-direction: column;
         @media (max-width: 768px) {
           width: 100%;
         }
